# ChangeLog for sys-fs/eudev
# Copyright 1999- Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/ChangeLog,v 1.81 2013/12/08 18:26:18 maekke Exp $

  08 Dec 2013; Markus Meier <maekke@gentoo.org> eudev-1.3.ebuild:
  arm stable, bug #487238

  01 Dec 2013; Johannes Huber <johu@gentoo.org> eudev-1.3.ebuild:
  x86 stable, bug #487238

  26 Nov 2013; Ian Stakenvicius <axs@gentoo.org> metadata.xml:
  update kmod and modutils use flag descriptions to better suit new
  functionality

  26 Nov 2013; Ian Stakenvicius <axs@gentoo.org> eudev-1.1.ebuild,
  eudev-1.2-r1.ebuild, eudev-1.2.ebuild, eudev-1.3.ebuild:
  fixed oops in last commit; USE='kmod -modutils' still resulted in module
  loading support being disabled

  26 Nov 2013; Ian Stakenvicius <axs@gentoo.org> eudev-1.1.ebuild,
  eudev-1.2-r1.ebuild, eudev-1.2.ebuild, eudev-1.3.ebuild:
  adjusted function of kmod and modutils use flags, so that modutils need not be
  enabled for module support if kmod is enabled

  25 Nov 2013; Tony Vroon <chainsaw@gentoo.org> eudev-1.1.ebuild,
  eudev-1.3.ebuild, eudev-9999.ebuild:
  Dependency fixups by Samuli Suominen to address bug #492446.

  24 Nov 2013; Pacho Ramos <pacho@gentoo.org> eudev-1.3.ebuild:
  amd64 stable, bug #487238

  12 Nov 2013; Jeroen Roovers <jer@gentoo.org> eudev-1.3.ebuild:
  Stable for HPPA (bug #487238).

  08 Oct 2013; Samuli Suominen <ssuominen@gentoo.org> eudev-1.3.ebuild:
  Revert back to ~hppa wrt #487238

  08 Oct 2013; Jeroen Roovers <jer@gentoo.org> eudev-1.3.ebuild:
  Stable for HPPA (bug #487238).

*eudev-1.3 (14 Sep 2013)

  14 Sep 2013; Anthony G. Basile <blueness@gentoo.org> +eudev-1.3.ebuild:
  Version bump

  03 Sep 2013; Agostino Sarubbo <ago@gentoo.org> eudev-1.1.ebuild:
  Stable for ia64, wrt bug #463910

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> eudev-1.1.ebuild:
  Stable for alpha, wrt bug #463910

  20 Aug 2013; Anthony G. Basile <blueness@gentoo.org> eudev-1.1.ebuild: