@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/eudev-1.3.ebuild,v 1.10 2013/12/08 18:26:18 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/eudev-1.3.ebuild,v 1.11 2014/01/06 20:12:32 axs Exp $
 
 EAPI="5"
 
@@ -141,7 +141,7 @@ multilib_src_configure()
 
 	# Only build libudev for non-native_abi, and only install it to libdir,
 	# that means all options only apply to native_abi
-	if multilib_is_native_abi; then econf_args+=(
+	if multilib_build_binaries; then econf_args+=(
 		--with-rootlibdir=/$(get_libdir)
 		$(use_enable doc gtk-doc)
 		$(use_enable gudev)
@@ -162,7 +162,7 @@ multilib_src_configure()
 
 multilib_src_compile()
 {
-	if ! multilib_is_native_abi; then
+	if ! multilib_build_binaries; then
 		cd src/libudev || die "Could not change directory"
 	fi
 	emake
@@ -170,7 +170,7 @@ multilib_src_compile()
 
 multilib_src_install()
 {
-	if ! multilib_is_native_abi; then
+	if ! multilib_build_binaries; then
 		cd src/libudev || die "Could not change directory"
 	fi
 	emake DESTDIR="${D}" install
@@ -183,7 +183,7 @@ multilib_src_test()
 	# but sandbox seems to evaluate the paths of the test i/o instead of the
 	# paths of the actual i/o that results.
 	# also only test for native abi
-	if multilib_is_native_abi; then
+	if multilib_build_binaries; then
 		addread /sys
 		addwrite /dev
 		addwrite /run
