@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/eudev-9999.ebuild,v 1.39 2013/11/25 09:38:20 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/eudev-9999.ebuild,v 1.40 2014/01/06 20:12:32 axs Exp $
 
 EAPI="5"
 
@@ -138,7 +138,7 @@ multilib_src_configure()
 	)
 	# Only build libudev for non-native_abi, and only install it to libdir,
 	# that means all options only apply to native_abi
-	if multilib_is_native_abi; then econf_args+=(
+	if multilib_build_binaries; then econf_args+=(
 		--with-rootlibdir=/$(get_libdir)
 		$(use_enable doc gtk-doc)
 		$(use_enable gudev)
@@ -159,7 +159,7 @@ multilib_src_configure()
 
 multilib_src_compile()
 {
-	if ! multilib_is_native_abi; then
+	if ! multilib_build_binaries; then
 		cd src/libudev || die "Could not change directory"
 	fi
 	emake
@@ -167,7 +167,7 @@ multilib_src_compile()
 
 multilib_src_install()
 {
-	if ! multilib_is_native_abi; then
+	if ! multilib_build_binaries; then
 		cd src/libudev || die "Could not change directory"
 	fi
 	emake DESTDIR="${D}" install
@@ -180,7 +180,7 @@ multilib_src_test()
 	# but sandbox seems to evaluate the paths of the test i/o instead of the
 	# paths of the actual i/o that results.
 	# also only test for native abi
-	if multilib_is_native_abi; then
+	if multilib_build_binaries; then
 		addread /sys
 		addwrite /dev
 		addwrite /run
