@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/eudev
 # Copyright 1999- Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/ChangeLog,v 1.81 2013/12/08 18:26:18 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/ChangeLog,v 1.82 2014/01/06 20:12:32 axs Exp $
+
+  06 Jan 2014; Ian Stakenvicius <axs@gentoo.org> eudev-1.1.ebuild,
+  eudev-1.2-r1.ebuild, eudev-1.2.ebuild, eudev-1.3.ebuild, eudev-9999.ebuild:
+  swapped multilib_is_native_abi to multilib_build_binaries
 
   08 Dec 2013; Markus Meier <maekke@gentoo.org> eudev-1.3.ebuild:
   arm stable, bug #487238
